--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/css/index.css">
     <script src="https://kit.fontawesome.com/3a1189f3fa.js"></script>
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -10,7 +10,7 @@
 </head>
 <body>
     <main class="flex">
-        <section class="card">
+<!--         <section class="card">
             <div class="card__img-holder">
                 <img class="card__img" src="./assets/media/Image.png" alt="" srcset="">
             </div>
@@ -18,77 +18,8 @@
              <i class="fas fa-heart"></i>
              <a href="" class="card__footer-link">more</a> 
             </footer>
-        </section> 
-
-        <section class="card">
-            <div class="card__img-holder">
-                <img class="card__img" src="./assets/media/Image.png" alt="" srcset="">
-            </div>
-            <footer class="card__footer">
-             <i class="fas fa-heart"></i>
-             <a href="" class="card__footer-link">more</a> 
-            </footer>
-        </section> 
-
-        <section class="card">
-            <div class="card__img-holder">
-                <img class="card__img" src="./assets/media/Image.png" alt="" srcset="">
-            </div>
-            <footer class="card__footer">
-             <i class="fas fa-heart"></i>
-             <a href="" class="card__footer-link">more</a> 
-            </footer>
-        </section> 
-
-        <section class="card">
-            <div class="card__img-holder">
-                <img class="card__img" src="./assets/media/Image.png" alt="" srcset="">
-            </div>
-            <footer class="card__footer">
-             <i class="fas fa-heart"></i>
-             <a href="" class="card__footer-link">more</a> 
-            </footer>
-        </section> 
-
-        <section class="card">
-            <div class="card__img-holder">
-                <img class="card__img" src="./assets/media/Image.png" alt="" srcset="">
-            </div>
-            <footer class="card__footer">
-             <i class="fas fa-heart"></i>
-             <a href="" class="card__footer-link">more</a> 
-            </footer>
-        </section> 
-
-        <section class="card">
-            <div class="card__img-holder">
-                <img class="card__img" src="./assets/media/Image.png" alt="" srcset="">
-            </div>
-            <footer class="card__footer">
-             <i class="fas fa-heart"></i>
-             <a href="" class="card__footer-link">more</a> 
-            </footer>
-        </section> 
-
-        <section class="card">
-            <div class="card__img-holder">
-                <img class="card__img" src="./assets/media/Image.png" alt="" srcset="">
-            </div>
-            <footer class="card__footer">
-             <i class="fas fa-heart"></i>
-             <a href="" class="card__footer-link">more</a> 
-            </footer>
-        </section> 
-
-        <section class="card">
-            <div class="card__img-holder">
-                <img class="card__img" src="./assets/media/Image.png" alt="" srcset="">
-            </div>
-            <footer class="card__footer">
-             <i class="fas fa-heart"></i>
-             <a href="" class="card__footer-link">more</a> 
-            </footer>
-        </section> 
+        </section>  -->
+        <script src="./assets/js/index.js"></script>
     </main>
 </body>
 </html>
