--- a/template.html
+++ b/template.html
@@ -4,12 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/css/index.css">
+    <script src="https://kit.fontawesome.com/3a1189f3fa.js"></script>
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
 </head>
 <body>
     <main class="template__main">
-        <img class="template__img" src="./assets/media/Photo.png" alt="" srcset="">
+       <!--  <img class="template__img" src="./assets/media/Photo.png" alt="" srcset="">
+        <i class="fas fa-heart template_heart"></i>
         <article class="template__article-area">
             <h3 class="template__small-heading">vælg by</h3>
             <h1 class="template__big-heading">Her er der en stor overskrift</h1>
@@ -23,6 +25,9 @@
             <p class="template__lilletext">lilletext</p>
             <p class="template__lilletext">lilletext</p>
         </article>
+         -->
     </main>
+
+    <script src="./assets/js/template.js"></script>
 </body>
 </html>
